reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__pipeline.rs_line_59_col_9_001.log

*** crates/tracewake-core/src/actions/pipeline.rs:59:9: replace PipelineStage::all -> &'static[PipelineStage] with Vec::leak(vec![Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/actions/pipeline.rs
+++ replace PipelineStage::all -> &'static[PipelineStage] with Vec::leak(vec![Default::default()])
@@ -51,38 +51,17 @@
     EventAppend,
     EventApplication,
     ProjectionViewUpdate,
     DebugLinkage,
 }
 
 impl PipelineStage {
     pub const fn all() -> &'static [PipelineStage] {
-        &[
-            PipelineStage::OriginIntake,
-            PipelineStage::ControllerBindingCheck,
-            PipelineStage::SourceContextValidation,
-            PipelineStage::ActionDefinitionLookup,
-            PipelineStage::ActorLookup,
-            PipelineStage::TargetBinding,
-            PipelineStage::LocalityReachabilityValidation,
-            PipelineStage::PhysicalPreconditionValidation,
-            PipelineStage::KnowledgePerceptionPlaceholder,
-            PipelineStage::SocialNormPlaceholder,
-            PipelineStage::CostDurationCheck,
-            PipelineStage::ReservationConflictCheck,
-            PipelineStage::PhaseBoundaryValidation,
-            PipelineStage::MutationPlanConstruction,
-            PipelineStage::ValidationReportCreation,
-            PipelineStage::EventEnvelopeConstruction,
-            PipelineStage::EventAppend,
-            PipelineStage::EventApplication,
-            PipelineStage::ProjectionViewUpdate,
-            PipelineStage::DebugLinkage,
-        ]
+        Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
     }
 }
 
 pub struct PipelineContext<'a> {
     pub registry: &'a ActionRegistry,
     pub state: &'a mut PhysicalState,
     pub agent_state: &'a mut AgentState,
     pub log: &'a mut EventLog,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `PipelineStage: Default` is not satisfied
  --> crates/tracewake-core/src/actions/pipeline.rs:59:24
   |
59 |         Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
   |                        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `PipelineStage`
  --> crates/tracewake-core/src/actions/pipeline.rs:34:1
   |
34 | pub enum PipelineStage {
   | ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `pipeline::PipelineStage: Default` is not satisfied
  --> crates/tracewake-core/src/actions/pipeline.rs:59:24
   |
59 |         Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
   |                        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `pipeline::PipelineStage`
  --> crates/tracewake-core/src/actions/pipeline.rs:34:1
   |
34 | pub enum PipelineStage {
   | ^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
